--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "main": "./build/ckeditor.js",
   "devDependencies": {
+    "@ckeditor/ckeditor5-alignment": "^35.2.0",
     "@ckeditor/ckeditor5-autoformat": "^35.2.0",
     "@ckeditor/ckeditor5-basic-styles": "^35.2.0",
     "@ckeditor/ckeditor5-dev-utils": "^30.5.0",
